fixed contrast issue in form
user reported not being able to see text in input and text area of form in dark modes; adjusted color to fix contrast to be visible

--- a/portfolio/src/Styles/BonesDark.css
+++ b/portfolio/src/Styles/BonesDark.css
@@ -389,6 +389,7 @@ p.bonesDark-banner {
   font-family: "VT323", monospace;
   font-size: 1rem;
   background-color: hsl(0, 0%, 6%);
+  color: whitesmoke;
 }
 
 .bonesDark-contact textarea {
@@ -397,6 +398,7 @@ p.bonesDark-banner {
   font-family: "VT323", monospace;
   font-size: 1rem;
   background-color: hsl(0, 0%, 6%);
+  color: whitesmoke;
 }
 
 .bonesDark-contact button {
